--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,11 @@ jobs:
         run: python backend/main.py
 
       - name: Commit and Push New Blog
+        env:
+          GH_TOKEN: ${{ secrets.GH_PAT }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add -A
           git commit -m "🤖 Auto-generated blog on $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${GH_TOKEN}@github.com/LeadbaseAI-Official/blog-website.git HEAD:main
